--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-sphinx>=4.0.0
-sphinx-rtd-theme>=0.5.0
-sphinx-autodoc-typehints>=1.12.0
+sphinx
+sphinx-rtd-theme
+sphinx-autodoc-typehints
+sphinx-togglebutton
+sphinx-design
+sphinx-copybutton
+nbsphinx
+ipykernel
